<resources>
    <string name="app_name">Material_GB_NasaApi</string>
    <string name="photo_of_the_day_stub">Photo of the day</string>
    <string name="search_wiki">Найти в Википедии</string>
    <string name="wiki_helper_text">Поищите термин в википедии</string>
    <string name="favourite">favourite</string>
    <string name="settings">settings</string>
    <string name="search">Search</string>
    <string name="fab_content_description">ADD</string>
    <string name="chip_text_today">Сегодня</string>
    <string name="chip_text_yesterday">Вчера</string>
    <string name="chip_text_day_before_yesterday">Позавчера</string>
    <string name="theme_select_label_text">Тема:</string>
    <string name="chip_light_text">Light</string>
    <string name="chip_sand_text">Sand</string>
    <string name="chip_aqua_text">Aqua</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="earth_image">Фото поверхности земли</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="toolbar_title">Collapsing Toolbar</string>
    <string name="image_content_description">image</string>
</resources>