<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_today"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_text_today"
            app:layout_constraintBottom_toTopOf="@id/image_view"
            app:layout_constraintEnd_toStartOf="@id/chip_yesterday"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_yesterday"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_text_yesterday"
            app:layout_constraintBottom_toBottomOf="@id/chip_today"
            app:layout_constraintEnd_toStartOf="@id/chip_day_before_yesterday"
            app:layout_constraintStart_toEndOf="@id/chip_today"
            app:layout_constraintTop_toTopOf="@id/chip_today" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip_day_before_yesterday"
            style="@style/Widget.MaterialComponents.Chip.Action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/chip_text_day_before_yesterday"
            app:layout_constraintBottom_toBottomOf="@id/chip_today"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/chip_yesterday"
            app:layout_constraintTop_toTopOf="@id/chip_today" />

        <me.proton.jobforandroid.material_gb_nasaapi.utils.EquilateralImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/photo_of_the_day_stub"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toTopOf="@id/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_today"
            app:srcCompat="@drawable/ic_no_photo_vector" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/overview"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_view" />

        <TextView
            android:id="@+id/overview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

</androidx.constraintlayout.widget.ConstraintLayout>